--- a/Cezar.csproj
+++ b/Cezar.csproj
@@ -51,6 +51,7 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="BookCipher.cs" />
     <Compile Include="CaesarCipher.cs" />
     <Compile Include="CipherForm.cs">
       <SubType>Form</SubType>
@@ -85,6 +86,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrithemiusCipher.cs" />
+    <Compile Include="XOREncryption.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
     </EmbeddedResource>
